--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -32,79 +32,120 @@
 }
 
 
-<!--header top start-->
-<!--header center area start-->
-<div class="header_middle">
-   <div class="container">
-      <div class="row align-items-center">
-         <div class="col-lg-3">
-            <div class="logo">
-                    <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo/online-shoping.png" style="height: 50px; width: 80%;" alt=""></a>
+<!-- category div start -->
+<div class="container my-4">
+    <div class="row">
+        <!-- Category Cards -->
+        <h4 style="color: rgba(24, 170, 63, 0.789); font-size:20px;">
+            CATEGORIES
+        </h4>
+        <div class="col-lg-9 col-md-6 mt-2">
+            <div class="row g-1">
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/f1.png" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Vegetable">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Vegetable</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/fruits-illustration-01_921799-7.png" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Fruits">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Fruits</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px; margin-bottom: 20px;">
+                        <img src="/assets/img/product/fish.png" class="card-img-top mt-2" style="height: 150px; width: 100%; object-fit: cover;" alt="Fish">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Fish</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/dairy.png" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Dairy">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Dairy</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/Crops.jpg" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Crops">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Crops</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/cattle.jpg" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Cattle">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Cattle</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/beef and mutton.jpg" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Meat">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Meat</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
+                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                        <img src="/assets/img/product/others.jpg" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Others">
+                        <div class="card-body">
+                            <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Others</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="col-lg-7">
-            <div class="header_middle_inner">
-               <div class="search-container">
+        </div>
 
-                        <form method="post" action="@Url.Action("Products", "Home")">
-                            <div class="hover_category">
-                                <select class="select_option" name="productTypeId">
-                                    <option selected value="0">All Categories</option>
-                                    @foreach (var productType in ViewData["productTypeSearchId"] as SelectList)
-                                    {
-                                        <option value="@productType.Value">@productType.Text</option>
-                                    }
-                                </select>
-                            </div>
-                            <div class="search_box">
-                                <input placeholder="Search product..." type="text" name="searchString">
-                                <button type="submit"><i class="zmdi zmdi-search"></i></button>
-                            </div>
-                        </form>
-
-               </div>
+        <div class="col-md-3 col-lg-3 mt-2" style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1); padding: 20px;">
+            <div class="text-center">
+                <h5 style="font-weight: bold; margin-bottom: 20px;">Find Local Farmers</h5>
             </div>
-         </div>
-
-         <div class="col-lg-2">
+            <div class="text-center mb-2">
+                <img src="/assets/img/product/location.png" style="width:30%; height:80px;" alt="Location Icon">
+            </div>
+            <div class="text-center ">
+                <button class="btn btn-success" style="width: 60%; margin-bottom: 10px;">Nearby Shop</button>
                 <form id="update-location-form" method="post" asp-area="Customer" asp-controller="UserProfile" asp-action="UpdateLocation">
                     <input type="hidden" id="latitude" name="latitude" />
                     <input type="hidden" id="longitude" name="longitude" />
                     <button type="button" class="btn btn-success" onclick="updateLocation()">Update Location</button>
                 </form>
-
-         </div>
-      </div>
-   </div>
-</div>
-<!--header center area end-->
-
-
-
-<!--category product area start-->
-<section class="category_product_area mt-30 mb-50">
-   <div class="container">
-      <div class="row">
-         <div class="col-12">
-            <div
-               class="category_product_carousel category_column4 owl-carousel">
-               @foreach (var product in Model.products)
-               {
-               <div class="single_category_product">
-                  <div class="category_product_thumb">
-                     <a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id"><img src="~/@product.Image" alt="catagory image" style="height: 220px; width: 70%; margin-top:10px" /></a>
-                  </div>
-                  <div class="category_product_name">
-                     <h2><a href="shop.html"> @product.Name</a></h2>
-                  </div>
-               </div>
-               }
+            
             </div>
-         </div>
-      </div>
-   </div>
-</section>
-<!--category product area end-->
+            <div class="text-center mb-3 ">
+                <img src="/assets/img/product/Price.png" class="mt-2" style="border-radius: 5%; width:100%; height:140px;" alt="4 Ps Image">
+            </div>
+            <div class="d-flex justify-content-between">
+                <a href="something" class="btn btn-success">Product Price</a>
+                <a href="something" class="btn btn-success">Delivery Price</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<style>
+    .card:hover {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        transform: translateY(-1px);
+        transition: all 0.2s ease;
+    }
+</style>
+<!-- category div End -->
+
+
+
 <!--deals product section area start-->
 <section class="deals_product_section mb-50">
    <div class="container">
