Category Product With View

--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -42,68 +42,85 @@
         <div class="col-lg-9 col-md-6 mt-2">
             <div class="row g-1">
                 <div class="col-6 col-md-3">
-                    <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
+                    <a asp-action="ProductCategory" asp-route-category="Vegetable" style="text-decoration: none;">
+                    <div  class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/f1.png" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Vegetable">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Vegetable</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                     <a asp-action="ProductCategory" asp-route-category="Fruits" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/fruits-illustration-01_921799-7.png" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Fruits">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Fruits</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                     <a asp-action="ProductCategory" asp-route-category="Fish" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px; margin-bottom: 20px;">
                         <img src="/assets/img/product/fish.png" class="card-img-top mt-2" style="height: 150px; width: 100%; object-fit: cover;" alt="Fish">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Fish</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                    <a asp-action="ProductCategory" asp-route-category="Dairy" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/dairy.png" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Dairy">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Dairy</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                    
+                    <a asp-action="ProductCategory" asp-route-category="Crops" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/Crops.jpg" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Crops">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Crops</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                     <a asp-action="ProductCategory" asp-route-category="Cattle" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/cattle.jpg" class="card-img-top" style="height: 150px; width: 100%; object-fit: cover;" alt="Cattle">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Cattle</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                     <a asp-action="ProductCategory" asp-route-category="Meat" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/beef and mutton.jpg" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Meat">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Meat</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
+                     <a asp-action="ProductCategory" asp-route-category="Pets" style="text-decoration: none;">
                     <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                         <img src="/assets/img/product/others.jpg" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Others">
                         <div class="card-body">
                             <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Others</h5>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
