Product Page Modification

--- a/Areas/Customer/Views/Home/ProductCategory.cshtml
+++ b/Areas/Customer/Views/Home/ProductCategory.cshtml
@@ -51,7 +51,8 @@
 
     </div>
 }
-else{
-    <p style="margin:30px;font-size:30px">No Product Avalable </p>
+else
+{
+    <h3 style="margin:30px;font-size:30px">No Product Avalable </h3>
 }
 
