--- a/Areas/Customer/Views/Home/Cart.cshtml
+++ b/Areas/Customer/Views/Home/Cart.cshtml
@@ -43,6 +43,7 @@
                                         <th>Catagory</th>
                                       
                                         <th>Quantity</th>
+                                        <th>Action</th>
                                       
                                     </tr>
                                 </thead>
@@ -89,9 +90,14 @@
             <div class="coupon_area">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <div class="coupon_code left">
-                            <h3>Conditions</h3>
-                            <p>Extra Delivary charge will be applicable  when It's over it's limit</p>
+                        <div class="coupon_code left ">
+                            <div class="mt-3 mb-3 ml-3" style="margin:15px">
+                            <h3>Conditions: </h3>
+                            <ul> <li>1. Extra Delivary charge will be applicable  when It's over it's limit</li></ul>
+                            <ul> <li>2. Buy Nearby shop to Reduce Delivary charge</li></ul>
+                            <ul> <li>3. Delivary charge will not be Refound</li></ul>
+
+                            </div>
                         </div>
                     </div>
 
@@ -101,13 +107,8 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="coupon_code right">
                                 <h3>Cart Totals</h3>
-                                <div class="coupon_inner">
-                                    @* 
-                                    <div class="cart_subtotal ">
-                                        <p>Shipping</p>
-                                        <p class="cart_amount"><span>Flat Rate:</span> tk</p>
-                                    </div>
-                                    <a href="#">Calculate shipping</a> *@
+                                <div class="coupon_inner  mt-3 mb-3 ml-3">
+                                   
 
                                     <div class="cart_subtotal">
                                         <p>Total </p>
@@ -142,7 +143,7 @@
                                     </div>
                                     <div class="checkout_btn">
 
-                                        <a asp-area="Customer" asp-action="Checkout" asp-controller="Order" class="btn btn-info">Proceed to Checkout</a>
+                                        <a asp-area="Customer" asp-action="Checkout" asp-controller="Order"  class="btn btn-info">Proceed to Checkout</a>
                                     </div>
                                 </div>
                             </div>
