--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,114 +4,125 @@
     ViewData["Title"] = "Register";
 }
 
+<div class="container mt-2">
+    <div class="row">
+        <!-- Left Side: Platform Photo, Rules, and Links -->
+        <div class="col-md-6">
+            <div class=" p-3">
+                <div class="text-center">
+                    <figure>
+                        <img src="https://static.vecteezy.com/system/resources/previews/015/411/104/original/paper-package-with-fresh-healthy-products-organic-food-from-the-farm-vegetables-and-fruits-food-delivery-flat-illustration-vector.jpg" alt="Sign up image" style="height:300px; width:120%" class="img-fluid">
+                    </figure>
+                    <h4>Already a member ?</h4>
+                    <a asp-area="Identity" asp-page="/Account/Login" style="width:150px; border-radius:10px" class="btn btn-primary"> Sign In</a>
+                </div>
+                <div class="text-center mt-4">
+                    <h4>Sign up with Other Services</h4>
+                    <div class="mt-4">
+                        <a href="#" style="width:60px" class="btn btn-danger mb-3"><i class="fa-brands fa-google"></i></a>
+                        <a href="#" style="width:60px" class="btn btn-primary mb-3"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#" style="width:60px"  class="btn btn-success mb-3"><i class="fa-brands fa-microsoft"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <style>
-        /* Custom CSS */
-        .wide-input {
-            width: 100%; 
-        }
+        <!-- Right Side: Form and Register Button -->
+        <div class="col-md-6 mt-10 p-10 " >
+            <div class="card p-2" style="border-radius: 10px; height: 100%; min-height: 450px; width:450px; padding:10px">
+                <form asp-route-returnUrl="@Model.ReturnUrl" method="post" style="margin:20px">
+                   @*  <div asp-validation-summary="All" class="text-danger"></div> *@
+                    <p class="text-center h3 fw-bold mb-3">Sign up</p>
 
-        .wide-button {
-            width: 100%; 
-        }
-    </style>
-
-                     
-
-<div class="container-fluid">
-    <div class="card text-black m-5" style="border-radius: 25px;">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-10 col-lg-6 order-2 order-lg-1 d-flex flex-column align-items-center">
-
-                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-
-                        <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-
-                        <div class="d-flex flex-row align-items-center mb-4 form-group">
-                            <i class="fas fa-user me-3"></i>
-                            <input asp-for="Input.FirstName" class="form-control wide-input" placeholder="First Name">
+                    <div class="row mb-3">
+                        <div class="col-md-6 mt-2">
+                            
+                            <input asp-for="Input.FirstName" class="form-control" placeholder="First Name">
                             <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                         </div>
-
-
-                        <div class="d-flex flex-row align-items-center mb-4 form-group">
-                            <i class="fas fa-user me-3"></i>
-                            <input asp-for="Input.LastName" class="form-control wide-input" placeholder="Last Name">
+                        <div class="col-md-6 mt-2">
+                          
+                            <input asp-for="Input.LastName" class="form-control" placeholder="Last Name">
                             <span asp-validation-for="Input.LastName" class="text-danger"></span>
                         </div>
+                    </div>
 
-
-                        <div class="d-flex flex-row align-items-center mb-4 form-group">
-                            <i class="fas fa-envelope me-3"></i>
-                            <input asp-for="Input.Email" class="form-control wide-input" placeholder="Your Email">
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        </div>
-
-                        <div class="d-flex flex-row align-items-center mb-4 form-group">
-                            <i class="fas fa-lock me-3"></i>
-                            <input asp-for="Input.Password" class="form-control wide-input" placeholder="Password">
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        </div>
-
-
-
-                        <div class="d-flex flex-row align-items-center mb-4 form-group">
-                            <i class="fas fa-key me-3"></i>
-                            <input asp-for="Input.ConfirmPassword" class="form-control wide-input" placeholder="Repeat your password">
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                        </div>
-
-                        <div class="mb-4">
-                            <div class="form-check form-group">
-                                <label>Select Role :</label> <br />
-                                <input type="checkbox" name="roles" value="Customer" /> Customer<br />
-                                  <input type="checkbox" name="roles" value="Farmer" /> Farmer<br />
-                                <input type="checkbox" name="roles" value="Rider" /> Rider<br />
-                          @*       <input type="checkbox" name="roles" value="Admin" /> Admin<br />
-                                <input type="checkbox" name="roles" value="SuperAdmin" />Super Admin<br /> *@
+                    <div class="mb-3">
+                        
+                        <input asp-for="Input.Email" class="form-control" placeholder="Your Email">
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3  position-relative">
+                       
+                            <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password" id="passwordField">
+                            <div class="input-group-append">
+                            <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);" onclick="togglePassword()">
+                                    <i class="fas fa-eye" id="togglePasswordIcon"></i>
+                                </span>
                             </div>
-                        </div>
-
-
-                        <button class="btn btn-primary mb-4 wide-button" type="submit">Register</button>
-                    </form>
-
-
-
-                </div>
-
-                <div class="col-md-10 col-lg-6 order-1 order-lg-2">
-                    <div class="signup-image text-center">
-                        <figure><img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" alt="sing up image" style="height:260px; width:100%"></figure>
-                        <a asp-area="Identity" asp-page="/Account/Login" class="signup-image-link">I am already a member</a>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
-                    <div class="text-center mt-4">
-                        <h4>Sign up with Other service </h4>
-                        <div class="mt-4">
-                            <a href="#" class="btn btn-danger mb-3"><i class="fa-brands fa-google"></i></a>
-                            <a href="#" class="btn btn-primary mb-3"> <i class="fa-brands fa-facebook"></i></a>
-                            <a href="#" class="btn btn-success mb-3"> <i class="fa-brands fa-microsoft"></i> </a>
+
+                    <div class="mb-3 position-relative">
+                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Repeat your password" id="confirmPasswordField">
+                        <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);" onclick="togglePassword2()">
+                            <i class="fas fa-eye" id="toggleConfirmPasswordIcon"></i>
+                        </span>
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+
+
+
+                    <div class="mb-4">
+                        <h4> Role : </h4>
+                        <div class="form-check form-check">
+                            <input class="form-check-input" type="checkbox" name="roles" value="Customer">
+                            <label class="form-check-label">Customer</label>
+                        </div>
+                        <div class="form-check form-check">
+                            <input class="form-check-input" type="checkbox" name="roles" value="Farmer">
+                            <label class="form-check-label">Farmer</label>
+                        </div>
+                        <div class="form-check form-check">
+                            <input class="form-check-input" type="checkbox" name="roles" value="Rider">
+                            <label class="form-check-label">Rider</label>
                         </div>
                     </div>
-                </div>
 
-
+                    <button class="btn btn-primary w-100" style=" border-radius:10px" type="submit">Register</button>
+                </form>
             </div>
         </div>
     </div>
 </div>
 
+<!-- Bootstrap JS -->
+@* <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> *@
+<script>
+    function togglePassword() {
+        const passwordField = document.getElementById("passwordField");
+        const togglePasswordIcon = document.getElementById("togglePasswordIcon");
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            togglePasswordIcon.classList.replace("fa-eye", "fa-eye-slash");
+        } else {
+            passwordField.type = "password";
+            togglePasswordIcon.classList.replace("fa-eye-slash", "fa-eye");
+        }
+    }
 
-
-    <!-- Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-
+    function togglePassword2() {
+        const passwordField = document.getElementById("confirmPasswordField");
+        const togglePasswordIcon = document.getElementById("toggleConfirmPasswordIcon");
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            togglePasswordIcon.classList.replace("fa-eye", "fa-eye-slash");
+        } else {
+            passwordField.type = "password";
+            togglePasswordIcon.classList.replace("fa-eye-slash", "fa-eye");
+        }
+    }
+</script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
