Login Page Design

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,7 @@
             <div class=" p-3">
                 <div class="text-center">
                     <figure>
-                        <img src="https://static.vecteezy.com/system/resources/previews/015/411/104/original/paper-package-with-fresh-healthy-products-organic-food-from-the-farm-vegetables-and-fruits-food-delivery-flat-illustration-vector.jpg" alt="Sign up image" style="height:300px; width:120%" class="img-fluid">
+                        <img src="https://static.vecteezy.com/system/resources/previews/015/411/104/original/paper-package-with-fresh-healthy-products-organic-food-from-the-farm-vegetables-and-fruits-food-delivery-flat-illustration-vector.jpg" alt="Sign up image" style="height:300px; width:100%" class="img-fluid">
                     </figure>
                     <h4>Already a member ?</h4>
                     <a asp-area="Identity" asp-page="/Account/Login" style="width:150px; border-radius:10px" class="btn btn-primary"> Sign In</a>
@@ -29,7 +29,7 @@
 
         <!-- Right Side: Form and Register Button -->
         <div class="col-md-6 mt-10 p-10 " >
-            <div class="card p-2" style="border-radius: 10px; height: 100%; min-height: 450px; width:450px; padding:10px">
+            <div class="card shadow-sm p-2" style="border-radius: 10px; height: 100%; min-height: 450px; width:450px; padding:10px">
                 <form asp-route-returnUrl="@Model.ReturnUrl" method="post" style="margin:20px">
                    @*  <div asp-validation-summary="All" class="text-danger"></div> *@
                     <p class="text-center h3 fw-bold mb-3">Sign up</p>
