--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,41 +5,62 @@
     ViewData["Title"] = "Log in";
 }
 
-
-
 <style>
-    /* Custom CSS */
-    .wide-input {
-        width: 100%;
+
+    .centered-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 85vh; 
+        
     }
 
-    .wide-button {
-        width: 100%;
+  
+    .external-login-buttons a {
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
+
+
+    .external-login-buttons {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .form-group-inline {
+        display: flex;
+        gap: 10px; 
+        justify-content: center; 
     }
 </style>
 
-
-
-<div class="container-fluid">
-    <div class="card text-black m-5" style="border-radius: 25px;">
-        <div class="card-body">
+<div class="container centered-card">
+    <div class="card  text-black" style="width: 28rem; border-radius:10px">
+        <div class="card-body  shadow-sm" style=" border-radius:10px">
             <div class="row">
-                <div class="col-md-10 col-lg-6 order-2 order-lg-1 d-flex flex-column align-items-center">
+                <div class="col align-items-center" style="margin:5px">
 
-                    <form method="post">
-                        <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login </p>
-                 
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="Input.Email"></label>
-                            <input asp-for="Input.Email" class="form-control" />
+                    <form method="post" >
+                        <p class="text-center h4 fw-bold mb-2 mx-1 mx-md-4 mt-2">Sign In</p>
+                        <figure>
+                            <img src="/img/logo/online-shoping.png" alt="Sign In" style="height:90px; justify-content:center; margin-left:40px; width:auto" class="img-fluid">
+                        </figure>
+
+                        <div class="mb-3">
+                            <input asp-for="Input.Email" class="form-control" placeholder="Your Email">
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
+                        <div class="mb-3 position-relative">
+                            <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password" id="passwordField">
+                            <div class="input-group-append">
+                                <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);" onclick="togglePassword()">
+                                    <i class="fas fa-eye" id="togglePasswordIcon"></i>
+                                </span>
+                            </div>
                             <span asp-validation-for="Input.Password" class="text-danger"></span>
                         </div>
+
                         <div class="form-group">
                             <div class="checkbox">
                                 <label asp-for="Input.RememberMe">
@@ -48,91 +69,69 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary   mb-4 wide-button">Log in</button>
+                        <div class="form-group mt-2">
+                            <button type="submit" style="border-radius:10px" class="btn btn-success mb-4 wide-button w-100">Log in</button>
                         </div>
-                        <div class="form-group">
-                            <p>
-                                <a class="btn btn-default" asp-page="./ForgotPassword">Forgot your password?</a>
-                            </p>
-                            <p>
-                                <a asp-page="./Register" class="btn btn-info" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                            </p>
+                        <div class="form-group-inline">
+                            <a class="btn btn-default" asp-page="./ForgotPassword">Forgot your password?</a>
+                            <a class="btn btn-default" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                         </div>
+
                     </form>
-
-
-
-                </div>
-
-                <div class="col-md-10 col-lg-6 order-1 order-lg-2">
-                    <div class="signup-image text-center">
-                        <figure><img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" alt="sing up image" style="height:250px; width:100%"></figure>
-                       
-                    </div>
                     <div class="text-center mt-4">
-                        <h4>Login with Other service </h4>
+                        <h4>Login with Other Services</h4>
                         @{
                             if ((Model.ExternalLogins?.Count ?? 0) == 0)
                             {
                                 <div>
                                     <p>
                                         There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                            article
-                                            about setting up this ASP.NET application to support logging in via external services
+                                            article about setting up this ASP.NET application to support logging in via external services
                                         </a>.
                                     </p>
                                 </div>
                             }
                             else
                             {
-                                <div class="mt-4">
+                                <div class="mt-4 external-login-buttons">
+                                   
+                                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                        <div>
+                                            <p>
+                                                @foreach (var provider in Model.ExternalLogins!)
+                                                {
+                                                    <button type="submit" class="btn btn-danger wide-button" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"> <i style="margin-left:2px; margin-right:2px" class="fa-brands fa-google"></i>@provider.DisplayName</button>
+                                                }
+                                            </p>
+                                        </div>
+                                    </form>
 
-                                    <a href="#" class="btn btn-primary mb-3"> <i class="fa-brands fa-facebook"> </i> Facebook</a>
-                                    <a href="#" class="btn btn-success mb-3"> <i class="fa-brands fa-microsoft"></i>Microsoft </a>
-                            
-
-                                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                    <div>
-                                        <p>
-                                            @foreach (var provider in Model.ExternalLogins!)
-                                            {
-                                                <button type="submit" class="btn btn-primary "  name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                            }
-                                        </p>
-                                    </div>
-                                </form>
+                                    <a href="#"style="margin-left:7px" class="btn btn-primary"><i class="fa-brands fa-facebook"></i> Facebook</a>
 
                                 </div>
                             }
                         }
-                        
-                        
-                        
-            
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-
-
-
-
-
-
-<!-- Bootstrap JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-
-
-
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<script>
+    function togglePassword() {
+        const passwordField = document.getElementById("passwordField");
+        const togglePasswordIcon = document.getElementById("togglePasswordIcon");
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            togglePasswordIcon.classList.replace("fa-eye", "fa-eye-slash");
+        } else {
+            passwordField.type = "password";
+            togglePasswordIcon.classList.replace("fa-eye-slash", "fa-eye");
+        }
+    }
+</script>
